--- a/omniNotes/src/foss/res/values/strings.xml
+++ b/omniNotes/src/foss/res/values/strings.xml
@@ -18,8 +18,8 @@
   -->
 <resources>
 
-    <string name="app_name">Omni Notes FOSS</string>
-    <string name="app_package">it.feio.android.omninotes.foss</string>
-    <string name="version_postfix">.FOSS</string>
+    <string name="app_name">Notes™ Pro</string>
+    <string name="app_package">com.lancenotes.app</string>
+
 
 </resources>
